logs/dag_id=zillow_analytics_dag/run_id=manual__2024-06-13T01:43:17.067102+00:00/task_id=tsk_is_file_in_s3_available/attempt=3.log
[2024-06-13T01:44:02.631+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-06-13T01:44:02.641+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: zillow_analytics_dag.tsk_is_file_in_s3_available manual__2024-06-13T01:43:17.067102+00:00 [queued]>
[2024-06-13T01:44:02.648+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: zillow_analytics_dag.tsk_is_file_in_s3_available manual__2024-06-13T01:43:17.067102+00:00 [queued]>
[2024-06-13T01:44:02.648+0000] {taskinstance.py:2306} INFO - Starting attempt 3 of 3
[2024-06-13T01:44:02.664+0000] {taskinstance.py:2330} INFO - Executing <Task(S3KeySensor): tsk_is_file_in_s3_available> on 2024-06-13 01:43:17.067102+00:00
[2024-06-13T01:44:02.668+0000] {standard_task_runner.py:63} INFO - Started process 128384 to run task
[2024-06-13T01:44:02.673+0000] {standard_task_runner.py:90} INFO - Running: ['airflow', 'tasks', 'run', 'zillow_analytics_dag', 'tsk_is_file_in_s3_available', 'manual__2024-06-13T01:43:17.067102+00:00', '--job-id', '92', '--raw', '--subdir', 'DAGS_FOLDER/zillowanalytics.py', '--cfg-path', '/tmp/tmpojn94so4']
[2024-06-13T01:44:02.675+0000] {standard_task_runner.py:91} INFO - Job 92: Subtask tsk_is_file_in_s3_available
[2024-06-13T01:44:02.709+0000] {task_command.py:426} INFO - Running <TaskInstance: zillow_analytics_dag.tsk_is_file_in_s3_available manual__2024-06-13T01:43:17.067102+00:00 [running]> on host ip-172-31-25-20.us-east-2.compute.internal
[2024-06-13T01:44:02.754+0000] {abstractoperator.py:725} ERROR - Exception rendering Jinja template for task 'tsk_is_file_in_s3_available', field 'bucket_key'. Template: '{{ti.xcom_pull("tsk_extract_zillow_data_var)[1]}}'
Traceback (most recent call last):
  File "/home/ubuntu/endtoend_venv/lib/python3.12/site-packages/airflow/models/abstractoperator.py", line 717, in _do_render_template_fields
    rendered_content = self.render_template(
                       ^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/endtoend_venv/lib/python3.12/site-packages/airflow/template/templater.py", line 168, in render_template
    template = jinja_env.from_string(value)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/endtoend_venv/lib/python3.12/site-packages/jinja2/environment.py", line 1108, in from_string
    return cls.from_code(self, self.compile(source), gs, None)
                               ^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/endtoend_venv/lib/python3.12/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/home/ubuntu/endtoend_venv/lib/python3.12/site-packages/jinja2/environment.py", line 939, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "<unknown>", line 1, in template
jinja2.exceptions.TemplateSyntaxError: unexpected char '"' at 15
[2024-06-13T01:44:02.756+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/ubuntu/endtoend_venv/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 2479, in _run_raw_task
    self._execute_task_with_callbacks(context, test_mode, session=session)
  File "/home/ubuntu/endtoend_venv/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 2633, in _execute_task_with_callbacks
    task_orig = self.render_templates(context=context, jinja_env=jinja_env)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/endtoend_venv/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3094, in render_templates
    original_task.render_template_fields(context, jinja_env)
  File "/home/ubuntu/endtoend_venv/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 1336, in render_template_fields
    self._do_render_template_fields(self, self.template_fields, context, jinja_env, set())
  File "/home/ubuntu/endtoend_venv/lib/python3.12/site-packages/airflow/models/abstractoperator.py", line 717, in _do_render_template_fields
    rendered_content = self.render_template(
                       ^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/endtoend_venv/lib/python3.12/site-packages/airflow/template/templater.py", line 168, in render_template
    template = jinja_env.from_string(value)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/endtoend_venv/lib/python3.12/site-packages/jinja2/environment.py", line 1108, in from_string
    return cls.from_code(self, self.compile(source), gs, None)
                               ^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/endtoend_venv/lib/python3.12/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/home/ubuntu/endtoend_venv/lib/python3.12/site-packages/jinja2/environment.py", line 939, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "<unknown>", line 1, in template
jinja2.exceptions.TemplateSyntaxError: unexpected char '"' at 15
[2024-06-13T01:44:02.761+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=zillow_analytics_dag, task_id=tsk_is_file_in_s3_available, run_id=manual__2024-06-13T01:43:17.067102+00:00, execution_date=20240613T014317, start_date=20240613T014402, end_date=20240613T014402
[2024-06-13T01:44:02.772+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 92 for task tsk_is_file_in_s3_available (unexpected char '"' at 15; 128384)
[2024-06-13T01:44:02.805+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-06-13T01:44:02.817+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-06-13T01:44:02.818+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
